--- a/src/components/NewTodo.module.css
+++ b/src/components/NewTodo.module.css
@@ -27,8 +27,8 @@
   
   .form button {
     font: inherit;
-    background-color: #ebb002;
-    border: 1px solid #ebb002;
+    background-color: #587180;
+    border: 1px solid #042235;
     color: #201d0f;
     padding: 0.5rem 1.5rem;
     border-radius: 4px;
